improve style for test262 test